<resources>
    <string name="app_name">WA Map</string>
    <string name="map_of_wa_campus">Map of WA campus</string>
    <string name="select_start_loc">Where are you now?</string>
    <string name="select_end_loc">Where do you want to go?</string>
    <string name="submit_locs">(Pokemon) Go</string>
    <string name="choose_loc_from">Choose a location</string>
    <string name="submit_locs_btn">(Pokemon) Go</string>
    <string name="map_of_wa">Map of WA</string>
    <string name="dev_show_west_map">West view</string>
    <string name="dev_show_east_map">East view</string>
    <string name="str_dev_select_map_view">Which map do you want to display?</string>
    <string name="show_dev_options_btn">Advanced...</string>
    <string name="dev_mode_submit_btn">Show me everything</string>
    <string-array name="locations">

        <item>Circle</item>
        <item>Bullring</item>
        <item>Library</item>
        <item>Richardson</item>
        <item>Front of Woodruff</item>
        <item>Back of Woodruff</item>
        <item>Carlos Science</item>
        <item>Moss Math/Science</item>
        <item>Campus Store</item>
        <item>Brand Hall</item>
    </string-array>


</resources>
