<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.strat.wamap.selectLocations"
    android:transitionGroup="true">

    <android.support.v7.widget.Toolbar
        android:id="@+id/dev_menu"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        android:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_start_loc"
        android:id="@+id/start_loc_prompt"
        android:layout_below="@+id/dev_menu"
        android:layout_alignParentStart="true"
        android:textSize="@dimen/loc_prompt_text"
        android:paddingStart="16dp"
        android:paddingTop="16dp" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/start_loc"
        android:spinnerMode="dropdown"
        android:prompt="@string/choose_loc_from"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_below="@+id/start_loc_prompt"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:paddingStart="16dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_end_loc"
        android:id="@+id/end_loc_prompt"
        android:textSize="@dimen/loc_prompt_text"
        android:layout_below="@+id/start_loc"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:paddingStart="16dp" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/end_loc"
        android:spinnerMode="dropdown"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_below="@+id/end_loc_prompt"
        android:layout_marginTop="10dp"
        android:paddingStart="16dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit_locs_btn"
        android:id="@+id/submit_locs"
        android:layout_below="@+id/end_loc"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/end_loc_prompt"
        android:layout_marginTop="10dp"
        android:onClick="checkResponses"
        android:nestedScrollingEnabled="false"
        android:textColor="@android:color/primary_text_light"
        android:enabled="true"
        android:paddingStart="16dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_dev_options_btn"
        android:visibility="gone"
        android:id="@+id/dev_adv_ops"
        android:layout_below="@+id/submit_locs"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/end_loc_prompt"
        android:layout_marginTop="10dp"
        android:onClick="showDevOptions"
        android:nestedScrollingEnabled="false"
        android:textColor="@android:color/primary_text_light"
        android:enabled="true"
        android:paddingStart="16dp" />


</RelativeLayout>
